tests/nightly/function/compile_fail/precondition_missing.stderr
error[E0308]: mismatched types
 --> $DIR/precondition_missing.rs:9:5
  |
9 |     #[assure("must be bar", reason = "is bar")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a tuple with 2 elements, found one with 1 element
  |
  = note: expected struct `std::marker::PhantomData<(pre::CustomCondition<"must be bar">, pre::CustomCondition<"must be baz">)>`
             found struct `std::marker::PhantomData<(pre::CustomCondition<"must be bar">,)>`
